k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spcpro-projects-service
  namespace: spcpro
spec:
  selector:
    app: spcpro-projects
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
