k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spcpro-projects-ingress
  namespace: spcpro
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - spcprojects.rodrigomocca.com
    secretName: spcpro-projects-tls
  rules:
  - host: spcprojects.rodrigomocca.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spcpro-projects-service
            port:
              number: 80
